# Library

./: CMakeLists.txt  Reading.cpp  Reading.h  Reading.kdev4  main.cpp
Indexer/: CMakeLists.txt  Indexer.kdev4  indexer.cpp  indexer.h  main.cpp  textfilterinterface.h
Indexer/.kdev4/: Indexer.kdev4
Indexer/TextFilters/: CMakeLists.txt  filterhtml.cpp  filterhtml.h  filterplaintext.cpp  filterplaintext.h
Indexer/xapian-omega-1.0.17/: Makefile  Makefile.in  config.h  config.h.in  config.status  configure  libtool  makemanpage  omega  omindex  omindex.1  omindex.cc  omindex.cc~  scriptindex  scriptindex.1  xapian-omega.spec
Indexer/xapian-omega-1.0.17/.deps/: cdb_find.Po  cdb_hash.Po  cdb_init.Po  cdb_unpack.Po  cgiparam.Po  commonhelp.Po  configfile.Po  date.Po  datematchdecider.Po  diritor.Po  freemem.Po  getopt.Po  hashterm.Po  htmlparse.Po  loadfile.Po  md5.Po  md5wrap.Po  metaxmlparse.Po  msvc_dirent.Po  myhtmlparse.Po  omega.Po  omindex.Po  query.Po  runfilter.Po  safe.Po  sample.Po  scriptindex.Po  stringutils.Po  utf8convert.Po  utf8truncate.Po  utils.Po  xmlparse.Po  xpsxmlparse.Po
Indexer/xapian-omega-1.0.17/docs/: Makefile  Makefile.in  cgiparams.html  omegascript.html  overview.html  scriptindex.html  termprefixes.html
Indexer/xapian-omega-1.0.17/extra/: omegascript.vim
Searcher/: CMakeLists.txt  Design specifications  Searcher.kdev4  baseitemview.cpp  baseitemview.h  embeddedviewcreatorinterface.h  embeddedviewtabber.cpp  embeddedviewtabber.h  enhancedlineedit.cpp  enhancedlineedit.h  filebrowser.cpp  filebrowser.h  fileitemview.cpp  fileitemview.h  main.cpp  mylineedit.cpp  mylineedit.h  queryresultview.cpp  queryresultview.h  searcher.cpp  searcher.h  searchitem.h  searchitemview.cpp  searchitemview.h  searchmodel.cpp  searchmodel.h  searchthread.cpp  searchthread.h  searchtreeview.cpp  searchtreeview.h
Searcher/.kdev4/: Searcher.kdev4
Searcher/EmbeddedViewCreators/: CMakeLists.txt  htmlviewcreator.cpp  htmlviewcreator.h
